WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109292
RTCPeerConnection.getStats() fails when remote stats are instantiated.
https://bugs.webkit.org/show_bug.cgi?id=109292
Summary
RTCPeerConnection.getStats() fails when remote stats are instantiated.
Harald Alvestrand
Reported
2013-02-08 05:51:28 PST
Assert failure observed. Stack trace: webkit!WebCore::RTCStatsReport::addElement+0xe4 webkit!WebCore::RTCStatsResponse::addElement+0x6b webkit!WebKit::WebRTCStatsResponse::addElement+0x44 content!content::LocalRTCStatsResponse::addElement+0x2f content!content::StatsResponse::AddElement+0x72 content!content::StatsResponse::OnComplete+0x149 content!webrtc::PeerConnection::OnMessage+0x21c content!jingle_glue::JingleThreadWrapper::RunTask+0x283 Code: void RTCStatsReport::addElement(bool isLocal, double timestamp) { if (isLocal) { ASSERT(!m_local); m_local = RTCStatsElement::create(timestamp); } ASSERT(!m_remote); <<============================================ m_remote = RTCStatsElement::create(timestamp); } Missing RETURN inside if block.
Attachments
Patch
(2.97 KB, patch)
2013-02-08 06:36 PST
,
Harald Alvestrand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Harald Alvestrand
Comment 1
2013-02-08 06:36:32 PST
Created
attachment 187308
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-08 09:07:04 PST
Comment on
attachment 187308
[details]
Patch Clearing flags on attachment: 187308 Committed
r142289
: <
http://trac.webkit.org/changeset/142289
>
WebKit Review Bot
Comment 3
2013-02-08 09:07:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug