Source/WebCore: Fix and test for missing return statement

RTCPeerConnection.getStats() failed when remote stats were instantiated.
https://bugs.webkit.org/show_bug.cgi?id=109292

Patch by Harald Alvestrand <hta@google.com> on 2013-02-08
Reviewed by Adam Barth.

Tested by extending the existing mock's behaviour.

* Modules/mediastream/RTCStatsReport.cpp:
(WebCore::RTCStatsReport::addElement):

Tools: Fix and test for missing return

RTCPeerConnection.getStats() fails when remote stats are instantiated.
https://bugs.webkit.org/show_bug.cgi?id=109292

Patch by Harald Alvestrand <hta@google.com> on 2013-02-08
Reviewed by Adam Barth.

* DumpRenderTree/chromium/MockWebRTCPeerConnectionHandler.cpp:
(MockWebRTCPeerConnectionHandler::getStats):

Canonical link: https://commits.webkit.org/127532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142289 268f45cc-cd09-0410-ab3c-d52691b4dbfc